Fixed stacked spacing issues

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -137,6 +137,13 @@ section#frontpagetitle {
     color: #fff;
   }
 }
+
+.stacked-spacing{
+  @media (max-width: 767px) {
+    margin-bottom: 15px;
+  }
+}
+
 section#pagetitle {
   background: @creme;
   padding-top: 50px;
